@@ -29,6 +29,7 @@ val normalize_pat : pattern -> pattern
 val all_record_args :
     (Path.t * Longident.t loc * label_description * pattern) list ->
     (Path.t * Longident.t loc * label_description * pattern) list
+val const_compare : constant -> constant -> int
 
 val le_pat : pattern -> pattern -> bool
 val le_pats : pattern list -> pattern list -> bool
