@@ -16,6 +16,7 @@ Bug fixes:
 - PR#5738: first class module patterns not handled by ocamldep
 - PR#5742: missing bound checks in Array.sub
 - PR#5757: GC compaction bug (crash)
+- PR#5758: Compiler bug when matching on floats
 
 
 OCaml 4.00.0:
